# eclair-ge

./: .gitignore  Cargo.toml  README.md  SPEC.md  out.json  test.bb  test_compilation.bb.json  test_included.bb  test_parser.bb
ege-compiler/: Cargo.toml
ege-compiler/src/: main.rs
ege-compiler/src/codegen/: expr.rs  func.rs  mod.rs  statement.rs
ege-compiler/src/lexer/: mod.rs
ege-compiler/src/parser/: ext.rs  mod.rs
ege-compiler/src/parser/ast_type/: array_decl.rs  expr.rs  func.rs  ident.rs  ident_path.rs  if_statement.rs  include.rs  insert.rs  loops.rs  mod.rs  packed_type.rs  return_statement.rs  select.rs  var_assign.rs
ege-compiler/src/semantical/: analyze.rs  expr.rs  mod.rs  statement.rs
ege-runtime/: Cargo.toml
ege-runtime/src/: lib.rs  rt.rs
ege-runtime/src/fs/: info.rs
ege-transpiler/: Cargo.toml
ege-transpiler/src/: main.rs
ege-transpiler/src/lexer/: mod.rs
ege-transpiler/src/parser/: ast_type.rs  ext.rs  mod.rs
ege-transpiler/src/parser/ast_type/: expr.rs  func.rs  ident.rs  if_statement.rs  include.rs  insert.rs  loops.rs  mod.rs  packed_type.rs  select.rs  var_assign.rs
test_files/: test_compilation.bb  test_parser.bb  test_reaaaaally_basic.bb
