[package]
name = "ege-transpiler"
version = "0.1.0"
edition = "2021"

[features]
# default = ["llvm18"]
default = ["llvm12"]
llvm18 = ["inkwell/llvm18-0"]
llvm12 = ["inkwell/llvm12-0"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
inkwell = { version = "0.5" }
log = "0.4.25"
clang_log = "2.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ptree = "0.5"
